Did a bit of moving files around and fixing namespaces. Did some small refactoring work.

--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/RoutingTestWindow.xaml
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/RoutingTestWindow.xaml
@@ -5,10 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Rogero.WpfNavigation.WpfTestApp"
         xmlns:wpfNavigation="clr-namespace:Rogero.WpfNavigation;assembly=Rogero.WpfNavigation"
+        xmlns:attachedProperties="clr-namespace:Rogero.WpfNavigation.AttachedProperties;assembly=Rogero.WpfNavigation"
         d:DataContext="{d:DesignInstance local:RoutingTestWindowViewModel, d:IsDesignTimeCreatable=False}"
         mc:Ignorable="d"
         Title="RoutingTestWindow" Height="350" Width="525">
-    <Grid wpfNavigation:RoutingComponent.RouterService="{Binding RouterService.Value}">
+    <Grid attachedProperties:RoutingComponent.RouterService="{Binding RouterService.Value}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="69*"/>
             <ColumnDefinition Width="77*"/>
@@ -23,7 +24,7 @@
         <Button Grid.Row="0" Command="{Binding OpenControl2CommandMain}" Grid.Column="1">Control2 on Main</Button>
         <Button Grid.Row="1" Command="{Binding OpenControl1CommandSecond}" Grid.Column="0">Control1 on Second</Button>
         <Button Grid.Row="1" Command="{Binding OpenControl2CommandSecond}" Grid.Column="1">Control2 on Second</Button>
-        <ContentControl wpfNavigation:RoutingComponent.ViewportName="MainViewport" Grid.Row="2" Grid.ColumnSpan="2" />
-        <ContentControl wpfNavigation:RoutingComponent.ViewportName="SecondViewport" Grid.Row="3" Grid.ColumnSpan="2" />
+        <ContentControl attachedProperties:RoutingComponent.ViewportName="MainViewport" Grid.Row="2" Grid.ColumnSpan="2" />
+        <ContentControl attachedProperties:RoutingComponent.ViewportName="SecondViewport" Grid.Row="3" Grid.ColumnSpan="2" />
     </Grid>
 </Window>
